Opened 17 years ago

Closed 10 years ago

Last modified 10 years ago

#2630 closed bug (fixed)

Eject when unmounting not working. (gcc2 only)

Reported by: bga Owned by: axeld
Priority: normal Milestone: R1
Component: Applications/Tracker Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

When a CD is unmounted it does not eject even when eject when unmounting is enabled in the Mount settings.

Attachments (1)

screenshot1.png (141.7 KB ) - added by vidrep 10 years ago.

Download all attachments as: .zip

Change History (14)

comment:1 by vidrep, 10 years ago

This is still a valid bug in hrev48269 x86_gcc2 If "eject when unmounting" is selected in mount settings, disks do not eject after being unmounted (screenshot1).

by vidrep, 10 years ago

Attachment: screenshot1.png added

comment:2 by axeld, 10 years ago

It is also a very strange bug, and seems to be timing related; I investigated this one once, and adding a few debug output messages fixed the issue IIRC.

comment:3 by vidrep, 10 years ago

This is still a valid bug in hrev48947. The description should probably change to something like "Unmounting Optical Disk; eject not working".

Last edited 10 years ago by vidrep (previous) (diff)

comment:4 by vidrep, 10 years ago

I was having a look at similar tickets, and it looks like #5099 and #11492 could possibly be closed as duplicates of this ticket.

comment:5 by axeld, 10 years ago

While those tickets mention the eject problem, they are both about adding a menu item to different components, not the actual issue mentioned here.

comment:6 by vidrep, 10 years ago

I tested the most recent builds (hrev49132), and find it strange that 64 bit works fine, but 32 bit does not.

comment:7 by pulkomandy, 10 years ago

Have you tried x86_gcc2 or x86 (gcc4)? It could be a compiler issue. It is known that the code for this is there, but not working reliably (possibly because there is a race condition: we try to eject the disk before it is fully unmounted). The result is that it works only sometimes (when the timing is right). Since the timing is different for each compiler and architecture (different cpu instructions used, etc), it's not very surprising that some work better than others.

comment:8 by vidrep, 10 years ago

I tested with hrev49132 x86_gcc2 and hrev49132 x86_64. I'll try a gcc4 build to see if it makes a difference.

comment:9 by vidrep, 10 years ago

I tried hrev49132 x86 and it works correctly.

comment:10 by vidrep, 10 years ago

OK. I downloaded and installed each build of hrev49132 (x86_gcc2, x86_gcc2_hybrid, x86_gcc4, x86_gcc4_hybrid) and hrev49123 x86_64. I tested each one multiple times for eject on unmount, using an optical disk. The only ones NOT working are x86_gcc2 and x86_gcc2_hybrid.

comment:11 by pulkomandy, 10 years ago

Summary: Eject when unmounting not working.Eject when unmounting not working. (gcc2 only)

comment:12 by pulkomandy, 10 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev49136.

comment:13 by vidrep, 10 years ago

Now working correctly, including when burning a CD with CDRecord with the "-eject" flag. Previously, when burning a disk, if the "-eject" flag was used, CDRecord would eject the CD prior to the burn, rather than after completion. Thanks for taking care of this!

Note: See TracTickets for help on using tickets.