Fix "eject when unmounting".

It seems getting the device from the partition after it is unmounted
does not work reliably. Get the device much earlier in the function,
before actually unmounting it.

Fixes #2630.